<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Meeting Organiser</string>
	<string name="action_settings">Settings</string>
	<string name="action_search">Search</string>
	<string name="google_app_id">secret-primacy-91608</string>

	<!-- General strings -->
	<string name="button_continue">Continue</string>
	<string name="button_create">Create</string>
	<string name="button_no">No</string>
	<string name="button_yes">Yes</string>
	<string name="textview_date">Date</string>
	<string name="textview_email">E-mail</string>
	<string name="textview_loading">Loading, please wait…</string>
	<string name="textview_name">Name</string>
	<string name="textview_phone_number">Phone number</string>
	<string name="textview_time">Time</string>
	<string name="textview_title">Title</string>
	<string name="toast_server_fail">Server response fail.</string>
	<string name="unknown">Unknown</string>

	<!-- Drawer strings -->
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="textview_not_logged_in">Not logged in</string>


	<string-array name="array_drawer_items_online">
		<item>Meetings</item>
		<item>Invitations</item>
		<item>History</item>
	</string-array>

	<string-array name="array_drawer_items_offline">
		<item>Log in</item>
		<item>Registration</item>
	</string-array>

	<!-- Dialog strings -->
	<string name="button_cancel">Cancel</string>
	<string name="button_send_sms">Send SMS</string>
	<string name="textview_choose_date">Choose a date</string>
	<string name="textview_choose_time">Choose a time</string>
	<string name="textview_please_write_sms">Please write a SMS to send.</string>
	<string name="textview_info_invite_via_sms">" of the contacts don\'t have an account.\nWould you like to invite them via SMS?\n(Some additional fees may apply)"</string>
    <string name="message_invite_via_sms">I would like to invite you to a meeting via
        Meeting Organiser. Please register to see the invitation.</string>

	<!-- Log in and registration strings -->
	<string name="textview_password">Password</string>
	<string name="toast_invalid_email">Invalid email address!</string>
	<string name="toast_short_password1">"Password must be at least "</string>
	<string name="toast_short_password2">" characters long!"</string>

	<!-- Log in  strings -->
	<string name="button_login">Log in</string>
	<string name="textview_create_account_u"><u>Create a new account</u></string>
	<string name="title_login">Log in</string>
	<string name="toast_login_successful">Log in successful!</string>
	<string name="toast_no_account">No account found!</string>
	<string name="toast_wrong_password">Wrong password!</string>

	<!-- Registration strings -->
	<string name="button_create_account">Create account</string>
	<string name="textview_full_name">Full name</string>
	<string name="textview_password_confirm">Confirm password</string>
	<string name="title_registration">Registration</string>
	<string name="toast_email_in_use">The e-mail is already in use!</string>
	<string name="toast_invalid_area_code">Invalid area code!</string>
	<string name="toast_invalid_phone_number">Invalid phone number!</string>
	<string name="toast_passwords_dont_match">The passwords don\'t match!</string>
	<string name="toast_phone_number_in_use">The phone number is already in use!</string>
	<string name="toast_please_enter_full_name">Please enter your full name!</string>
	<string name="toast_registration_successful">Registration successful!</string>

	<!-- New meeting strings -->
	<string name="textview_description">Description</string>
	<string name="textview_end_time">End time</string>
	<string name="textview_start_time">Start time</string>
	<string name="textview_touch_to_set">Touch to set</string>
	<string name="textview_touch_to_view">Touch to view</string>
	<string name="title_new_meeting">New meeting</string>
	<string name="toast_please_enter_title">Please enter a title!</string>
	<string name="toast_please_set_date">Please set a date!</string>
	<string name="toast_please_set_end_time">Please set an end time!</string>
	<string name="toast_please_set_start_time">Please set a start time!</string>
	<string name="toast_end_time_after_start">The end time must be after start time!</string>
	<string name="toast_start_time_future">The start time must be in the future!</string>

	<!-- Choose location strings -->
	<string name="button_search">Search</string>
	<string name="button_add_location">Add location</string>
	<string name="textview_meeting_location">Meeting location</string>
	<string name="title_choose_location">Choose a location</string>
	<string name="toast_geocoder_service_error">Service currently not available.</string>
	<string name="toast_location_not_found">Location not found!</string>
	<string name="toast_please_choose_location">Please choose a location!</string>
	<string name="toast_please_get_your_location">Please get your location!</string>
	<string name="textview_search_location">Search for a location</string>

	<string name="info_specific_location">Choose a location on the map or search from the search bar.</string>
	<string name="info_location_generated_from_locations">
		Choose several locations on the map and the final location will be chosen based on the positions of the participants.</string>
	<string name="info_location_generated_from_parameters">
		Choose location parameters and the final location will be chosen based on the chosen filters and the positions of the participants.</string>

	<string name="textview_slide_up">Slide up for more info.</string>

	<string-array name="array_location_items">
		<item>Specific location</item>
		<item>Generated from locations</item>
		<item>Generated from parameters</item>
	</string-array>

	<string-array name="array_location_parameters">
		<item>Cafe</item>
		<item>Restaurant</item>
		<item>Park</item>
	</string-array>

	<!-- Choose contacts strings -->
	<string name="button_create_meeting">Create meeting</string>
	<string name="textview_no_contacts">No contacts found</string>
	<string name="title_invite_contacts">Invite contacts</string>
	<string name="toast_please_choose_contacts">Please choose contacts to invite!</string>
	<string name="toast_meeting_created">New meeting created!</string>

	<!-- Meeting info strings -->
	<string name="button_accept">Accept</string>
	<string name="button_deny">Deny</string>
	<string name="button_show_participants">Show participants</string>
	<string name="textview_no_info">No info found.</string>
	<string name="textview_no_meetings">No meetings found.</string>
	<string name="title_meeting_info">Meeting info</string>

	<!-- Participant info strings -->
	<string name="textview_no_participants">No participants found.</string>
	<string name="textview_participating">Participating</string>
	<string name="textview_not_answered">Not answered</string>
	<string name="textview_yes">Yes</string>
	<string name="textview_no">No</string>
	<string name="title_participants">Participants</string>
	<string name="title_activity_login">Sign in</string>

	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password (optional)</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>

</resources>
