<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true">

	<LinearLayout
		style="@style/FragmentLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="start"
		android:orientation="vertical">

		<TextView
			android:id="@+id/meeting_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/meeting_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/meeting_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/meeting_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<FrameLayout
			android:id="@+id/location_frame"
			android:layout_width="match_parent"
			android:layout_height="250dp"
			android:layout_marginTop="@dimen/view_margin_medium"/>

		<LinearLayout
			android:id="@+id/invitation_answer_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/view_margin_large"
			android:orientation="horizontal">

			<Button
				style="@style/RaisedButton"
				android:id="@+id/accept_invitation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginRight="@dimen/view_margin_small"
				android:layout_weight="0.5"
				android:text="@string/button_accept"/>

			<Button
				style="@style/RaisedButton"
				android:id="@+id/deny_invitation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="@dimen/view_margin_small"
				android:layout_weight="0.5"
				android:text="@string/button_deny"/>
		</LinearLayout>

		<include layout="@layout/view_empty_space"/>

		<Button
			style="@style/RaisedButton"
			android:id="@+id/show_participants"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/view_margin_large"
			android:text="@string/button_show_participants"/>

	</LinearLayout>
</ScrollView>